--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Fast Notes (DEV)",
+  "name": "Fast Notes",
   "description": "Prise de note rapide pour navigateur !",
-  "version": "2.4",
+  "version": "2.5",
   "icons": {
     "32": "32.png",
     "128": "128.png"
